--- a/RegionalText/2019/A27/DataCollectionPrograms.tex
+++ b/RegionalText/2019/A27/DataCollectionPrograms.tex
@@ -1,4 +1,4 @@
 The ``Seaveyor'' surveyed the area April \nth{1} to April \nth{4}.
-Survey effﬀort was concentrated in Section 273, and identification of spawning events relied largely on communication from local residents to the DFO Resource Manager.
+Survey effort was concentrated in Section 273, and identification of spawning events relied largely on communication from local residents to the DFO Resource Manager.
 The spawn dive survey in Statistical Area 27 found spawn running from Browning Inlet up into Forward Inlet.
-The survey team scouted the rest of the area, but found no other spawn.  
+The survey team scouted the rest of the area, but found no other spawn. 
