--- a/RegionalText/2020/A27/GeneralObservations.tex
+++ b/RegionalText/2020/A27/GeneralObservations.tex
@@ -1,11 +1,11 @@
 \begin{itemize}
 
-\item There was no commercial Spawn-on-kelp harvest in 2020 in Area 27.
+\item There was no commercial spawn-on-kelp harvest in 2020 in Area 27.
 Licence holders did not set up and no harvest took place in 2020.
 
 \item The spawn reconnaissance flight path does not typically include Area 27.
 
-\item A herring spawn was reported to DFO by Winter Harbour residents on March 1 but divers were not able to survey this spawn within the necessary time period.
+\item A herring spawn was reported to DFO by Winter Harbour residents on March \nth{1} but divers were not able to survey this spawn within the necessary time period.
 No other dive surveys were carried out in Area 27 this year.
 
 \end{itemize}
