--- a/RegionalText/2020/A2W/GeneralObservations.tex
+++ b/RegionalText/2020/A2W/GeneralObservations.tex
@@ -1,7 +1,7 @@
 \begin{itemize}
 
 \item This year had the first commercial SOK fishery since 2014.
-This fishery provided useful information on when to start the 6 day spawn assessment charter.
+This fishery provided useful information on when to start the six day spawn assessment charter.
 
 \item Spawn seemed to start and stop over a longer period of time than in past years.
 
