--- a/RegionalText/2020/CC/GeneralObservations.tex
+++ b/RegionalText/2020/CC/GeneralObservations.tex
@@ -5,9 +5,9 @@
 \item The SOK fishery was cancelled, but FSC did proceed.
 
 \item Because of limited overflights, dive boats spent a lot of time searching for spawn.
-A small boat charter to map spawns at low tides, like the reconnaissance done in Haida Gwaii, is recommended for future surveys.
+A small boat charter to map spawn at low tide, as in Haida Gwaii, is recommended for future surveys.
 
-\item Overall it seemed like a better spawn year than last year.
+\item Overall it seemed like more spawn year than last year.
 
 \item Spawn was broadly distributed throughout the area, and all observed spawns were surveyed.
 However, some deep spawn in upper Spiller Channel may have been missed.
