--- a/RegionalText/2020/HG/GeneralObservations.tex
+++ b/RegionalText/2020/HG/GeneralObservations.tex
@@ -25,6 +25,6 @@ There were very few juvenile fish this year.
 \item Prevailing Northwest and Northeast winds kept water temperature between 6.2 and 6.4$^\circ\text{C}$.
 
 \item As in previous years, the seine test encountered Humpback Whales feeding on herring.
-There appears to have been an increase in the number of Grey Whales feeding on herring spawn over the past 4 years.
+There appears to have been an increase in the number of Grey Whales feeding on herring spawn over the past four years.
 
 \end{itemize}
