--- a/RegionalText/2020/PRD/GeneralObservations.tex
+++ b/RegionalText/2020/PRD/GeneralObservations.tex
@@ -4,19 +4,20 @@
 
 \item The extended seine charter allowed for coverage of Hunts Inlet.
 
-\item A drone was used to map spawns, which was effective at measuring spawn lenght and saved costs for flights.
+\item A drone was used to map spawns, which was effective at measuring spawn length and saved costs for flights.
 
 \item All major observed spawns were surveyed this year.
 
 \item Surface surveys are thought to be effective in the Big Bay area where most of the spawn is intertidal,
 but may be less effective in Kitkatla where the bathymetry is steeper.
 
-\item The seine charter was used for to sound and take samples, as well as track spawns.
+\item The seine charter was used to sound and take samples, as well as track spawns.
 Herring were shallower than usual which facilitated sampling.
 
 \item In Kitkatla, soundings estimated a similar abundance of fish as last year.
 
-\item Earlier spawn began inside Kitatkla Inlet around Dries Inlet and Camp Creek, with the later spawn being concentrated on the outside of the Inlet.
+\item Earlier spawn began inside Kitatkla Inlet around Dries Inlet and Camp Creek,
+with the later spawn concentrated on the outside of the Inlet.
 
 \item Spawn was significant and continuous outside of Kitkatla Inlet, from Oval Bay south past Joachin Point.
 
