--- a/Document/HerringSummary.sty
+++ b/Document/HerringSummary.sty
@@ -121,6 +121,6 @@ These data may differ from data used and presented in the final stock assessment
 \hrule
 
 % Extra space
-%\vspace{1cm}
+\vspace{1cm}
 
 }% End of frontmatter
