--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -50,7 +50,7 @@
 \newcommand{\darkThisYr}{The year \thisYr{} has a darker bar to facilitate interpretation.}
 \newcommand{\withPrivacy}[1]{Note: data may be withheld due to privacy concerns (#1).}
 \newcommand{\noSOK}{Data from the spawn-on-kelp (SOK) fishery are not included.}
-\newcommand{\spawnIndexTechReport}{See the \href{https://github.com/grinnellm/HerringSpawnDocumentation/blob/master/SpawnIndexTechnicalReport.pdf}{draft spawn index techincal report} for calculations to convert SOK harvest to spawning biomass.}
+\newcommand{\spawnIndexTechReport}{See the \href{https://github.com/grinnellm/SpawnIndex/blob/master/tr/Draft.pdf}{draft spawn index techincal report} for calculations to convert SOK harvest to spawning biomass.}
 \newcommand{\missingSpawn}[1]{Missing spawn index values (#1) indicate incomplete spawn surveys.}
 \newcommand{\spawnTypes}{There are three types of spawn survey observations: observations of spawn taken from the surface usually at low tide, underwater observations of spawn on giant kelp, Macrocystis (\emph{Macrocystis} spp.), and underwater observations of spawn on other types of algae and the substrate, which we refer to as `understory.'}
 \newcommand{\pctChange}[1]{Percent change is $\delta_t=\frac{\alpha_t - \alpha_{t-1}}{\alpha_{t-1}}$ where $\alpha_t$ is the #1 in year $t$.}
@@ -58,15 +58,19 @@
 % COVID-19 comment
 \newcommand{\covid}{\section{COVID-19 pandemic}
 The COVID-19 pandemic has affected British Columbia (BC) in many ways this year, including our ability to collect and analyse Pacific Herring data.
-Because the pandemic and associated provincial response changed rapidly during the Pacific Herring field program season, stock assessment regions (SARs) with later spawns were affected more than SARs with earlier spawns.
+The pandemic and associated provincial response changed rapidly during the Pacific Herring field program season.
+Despite these challenges, surveyors assessed all major observed spawns in the \Sexpr{length(allRegions$major)} major stock assessment regions (SARs).
+However, these changes impacted our ability to assess spawn in SARs with later spawns more than SARs with earlier spawns.
 For example, spawns were surveyed by surface surveys instead of underwater dive surveys in Prince Rupert District and Haida Gwaii.\par
-Although Pacific Herring biosamples were collected as usual, the analysis of biosample data has been delayed for all SARs.
-This is particularly true for age data, which are analysed at the sclerochronology lab at the Pacific Biological Station (PBS).
-This lab has been inoperative since March \nth{16}, when most PBS staff were required to work from home.
-Thus, the COVID-19 pandemic delayed the analysis of age data for Pacific Herring and many other species.
+Although Pacific Herring biological samples were collected as usual, the pandemic delayed the analysis of biological data for all SARs.
+This delay is most notable for age data which are analysed at the sclerochronology lab at the Pacific Biological Station (PBS).
+This lab has been inoperative since March \nth{16} when most PBS staff were required to work from home.
+Thus, the COVID-19 pandemic delayed the analysis of age data for Pacific Herring and other species.
 To address this backlog efficiently, senior science staff and fisheries managers at DFO are prioritizing species to analyse when the sclerochronology lab restarts.
-Unfortunately, it may not be possible to analyse all the Pacific Herring age data in time for stock assessments this year.\par
-The COVID-19 pandemic has also affected our ability to assess Pacific Hering stocks.
-Although we hope to assess Pacific Hering stocks as usual, we may not be able to develop formal stock assessments for each major SAR this year.
+Unfortunately, it may not be possible to analyse all the Pacific Herring age data in time for stock assessments this year.
+Note that although age data are not required for Pacific Herring stock assessments, they are an important component.\par
+The COVID-19 pandemic may also affect our ability to assess Pacific Herring stocks.
+Although we hope to assess Pacific Herring stocks as usual, we may be unable to develop formal stock assessments for each major SAR this year.
 Again, senior science staff and fisheries managers are prioritizing Pacific Herring SARs for stock assessments.
+We expect that high priority SARs will also have priority for age data analysis.
 We appreciate your patience and understanding as we continue to work from home in these uncertain and fast-changing times.}
