--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -57,20 +57,17 @@
 
 % COVID-19 comment
 \newcommand{\covid}{\section{COVID-19 pandemic}
-The COVID-19 pandemic has affected British Columbia (BC) in many ways this year, including our ability to collect and analyse Pacific Herring data.
+The coronavirus pandemic impacted our ability to collect and analyse Pacific Herring data throughout British Columbia in 2020.
 The pandemic and associated provincial response changed rapidly during the Pacific Herring field program season.
 Despite these challenges, surveyors assessed all major observed spawns in the \Sexpr{length(allRegions$major)} major stock assessment regions (SARs).
 However, these changes impacted our ability to assess spawn in SARs with later spawns more than SARs with earlier spawns.
 For example, spawns were surveyed by surface surveys instead of underwater dive surveys in Prince Rupert District and Haida Gwaii.\par
 Although Pacific Herring biological samples were collected as usual, the pandemic delayed the analysis of biological data for all SARs.
-This delay is most notable for age data which are analysed at the sclerochronology lab at the Pacific Biological Station (PBS).
-This lab has been inoperative since March \nth{16} when most PBS staff were required to work from home.
-Thus, the COVID-19 pandemic delayed the analysis of age data for Pacific Herring and other species.
-To address this backlog efficiently, senior science staff and fisheries managers at DFO are prioritizing species to analyse when the sclerochronology lab restarts.
+This delay is most notable for age data which are analysed at the sclerochronology lab at the Pacific Biological Station.
+This lab closed on March \nth{16}, and resumed limited ageing analysis on July \nth{6}.
+This resulted in delayed Pacific Herring ages for 2020, and many other species.
+To address this backlog efficiently, senior science staff and fisheries managers at DFO are prioritizing species to analyse in the sclerochronology lab.
 Unfortunately, it may not be possible to analyse all the Pacific Herring age data in time for stock assessments this year.
 Note that although age data are not required for Pacific Herring stock assessments, they are an important component.\par
-The COVID-19 pandemic may also affect our ability to assess Pacific Herring stocks.
-Although we hope to assess Pacific Herring stocks as usual, we may be unable to develop formal stock assessments for each major SAR this year.
-Again, senior science staff and fisheries managers are prioritizing Pacific Herring SARs for stock assessments.
-We expect that high priority SARs will also have priority for age data analysis.
-We appreciate your patience and understanding as we continue to work from home in these uncertain and fast-changing times.}
+We will update data summary reports with biological data for 2020, including age data, when available.
+We appreciate your patience and understanding as we continue to work from home in these uncertain and changing times.}
