--- a/RegionalText/2020/A2W/DataCollectionPrograms.tex
+++ b/RegionalText/2020/A2W/DataCollectionPrograms.tex
@@ -1,1 +1,4 @@
-No observations for \thisYr{}.
+In 2020, biological samples were collected by the ``Queens Reach'', a seine test charter vessel funded by DFO.
+The ``Queens Reach'' collected biological samples from main bodies of herring, identified from soundings.
+The ``Atlas'' operated a 6 day surface survey in Area 2 West, from April \nth{4} to April \nth{9}.
+Both vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
