--- a/RegionalText/2020/HG/DataCollectionPrograms.tex
+++ b/RegionalText/2020/HG/DataCollectionPrograms.tex
@@ -1,1 +1,7 @@
-No observations for \thisYr{}.
+In 2020, biological samples were collected by the ``Queens Reach'', a seine test charter vessel funded by DFO.
+The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring from Haida Gwaii major (priority) and minor stock areas, identified from soundings.
+The ``Queens Reach'' operated a 25 day charter from March \nth{9} to April \nth{2}, collecting samples from HG and Area 2 West.
+It was necessary to make changes to the dive survey program due to Covid-19. The ``Haida Spirit'' was unable to operate the dive charter however the ``Victoria Rose'' was repurposed from a spawn reconnaissance charter to a surface survey charter and successfully completed a 20 day charter from March \nth{30} to April \nth{18}.
+The Atlas completed a 6 day surface survey charter in Area 2 West from April \nth{4} to \nth{9}.
+
+All vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
