--- a/RegionalText/2020/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2020/SoG/DataCollectionPrograms.tex
@@ -1,1 +1,13 @@
-No observations for \thisYr{}.
+Biological samples were collected by the seine charter vessel ``Denman Isle'' for 27 days from February \nth{20} to March \nth{19}.
+Three additional Industry test vessels collected biological samples between February \nth{27} to March \nth{20}.
+The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring in Statistical Areas 14 and 17, as identified from soundings.
+
+Herring spawn locations were primarily identified with fixed-wing overflights conducted by DFO Resource Management Area staff.
+Fifteen flights were conducted this season, between February and April.
+Two dive charter vessels operated in the SoG:
+\begin{itemize}
+\item The ``Viking Spirit'' surveyed 21 days from March \nth{13} to April \nnd{2}, and
+\item The ``Ocean Cloud'' surveyed 12 days from March \nth{12} to March \nrd{23}.
+\end{itemize}
+Both dive vessels and the seine charter vessel ``Denman Isle'' were funded by DFO, through a contract to the Herring Conservation Research Society.
+Additional sampling and sounding efforts conducted through the Industry Test Program were funded by the Herring Industry.
