--- a/RegionalText/2020/WCVI/DataCollectionPrograms.tex
+++ b/RegionalText/2020/WCVI/DataCollectionPrograms.tex
@@ -1,1 +1,15 @@
-No observations for \thisYr{}.
+Biological samples were collected by the seine charter vessel ``Proud Canadian'' for 21 days from February \nth{20} to March \nth{11}.
+The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring from Statistical Areas 23, 24, and 25.
+Nearshore herring samples were collected by the Nuu-chah-nulth staff as part of a pilot sampling program and on-going collaboration between WCVI First Nations and DFO.
+These nearshore biological samples were collected from spawning aggregations using cast nets.
+WCVI First Nations spawn reconnaissance charters reported spawn activity in all 3 areas, and conducted spawn surveys using surface survey methods in Hesquiat Harbour (Statistical Area 24).
+
+Herring spawn locations were primarily identified with fixed-wing overflights conducted by DFO Resource Management Area staff.
+Thirteen flights were conducted this season in February and March.
+
+Two dive charter vessels operated on the WCVI:
+\begin{itemize}
+\item The ``Pachena No.1'' surveyed 15 days from March \nth{9} to March \nrd{23}, and
+\item The ``Seaveyor'' surveyed 11 days from February \nth{26} to March \nnd{22}.
+\end{itemize}
+The seine test charter vessel and the dive survey vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
