--- a/RegionalText/2020/CC/DataCollectionPrograms.tex
+++ b/RegionalText/2020/CC/DataCollectionPrograms.tex
@@ -1,1 +1,17 @@
-No observations for \thisYr{}.
+The data collection program in the Central Coast reflected a number of collaborations between DFO, the Heiltsuk Nation, and the Herring Industry.
+Biological samples were collected by the seine test charter vessel ``Windward Isle'' for 22 days from March \nth{14} to April \nth{4}.
+The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring in Statistical Areas 06, 07, and 08, identified from soundings.
+Due to Covid-19, no nearshore cast net herring samples were collected by Heiltsuk or Kitasoo in 2020.
+% Nearshore herring samples were collected by Heiltsuk and Kitasoo staff as part of a pilot sampling program and on-going collaboration between CC First Nations and DFO.
+% These nearshore biological samples were collected from spawning aggregations using cast nets.
+
+Herring spawn locations were primarily identified with fixed-wing overflights conducted by DFO Resource Management Area staff.
+Four spawn flights were conducted this season, in late March and early April.
+Two dive charter vessels operated in the CC:
+\begin{itemize}
+\item The ``Pachena No.1'' surveyed 17 days from April \nth{2} to April \nth{18},
+\item The ``Ocean Cloud'' surveyed 17 days from March \nth{27} to April \nth{12}, and
+% \item The Kitasoo First Nations surveyed 5 days from April \nth{1} to April \nth{5}.
+\end{itemize}
+Three gillnet sounding vessels were operated by the Heiltsuk Nation this season:
+two primarily in Statistical Area 07, and one primarily in Statistical Area 08 to assist in locating fish for spawn on kelp (SOK) operations.
