Edits to JC blurbs

--- a/RegionalText/2020/A27/DataCollectionPrograms.tex
+++ b/RegionalText/2020/A27/DataCollectionPrograms.tex
@@ -1,5 +1,1 @@
-Survey activities were not conducted in Area 27 due to Covid-19.
-% The ``Seaveyor'' surveyed the area April \nth{1} to April \nth{4}.
-% Survey effort was concentrated in Section 273, and identification of spawning events relied largely on communication from local residents to the DFO Resource Manager.
-% The spawn dive survey in Statistical Area 27 found spawn running from Browning Inlet up into Forward Inlet.
-% The survey team scouted the rest of the area, but found no other spawn. 
+Survey activities were not conducted in Area 27 due to COVID-19.
