--- a/RegionalText/2020/WCVI/DataCollectionPrograms.tex
+++ b/RegionalText/2020/WCVI/DataCollectionPrograms.tex
@@ -2,7 +2,8 @@ Biological samples were collected by the seine charter vessel ``Proud Canadian''
 The primary purpose of the test charter vessel was to collect biological samples from main bodies of herring from Statistical Areas 23, 24, and 25.
 Nearshore herring samples were collected by the Nuu-chah-nulth staff as part of a pilot sampling program and on-going collaboration between WCVI First Nations and DFO.
 These nearshore biological samples were collected from spawning aggregations using cast nets.
-WCVI First Nations spawn reconnaissance charters reported spawn activity in all 3 areas, and conducted spawn surveys using surface survey methods in Hesquiat Harbour (Statistical Area 24).
+WCVI First Nations spawn reconnaissance charters reported spawn activity in all three areas,
+and conducted spawn surveys using surface survey methods in Hesquiat Harbour (Statistical Area 24).
 
 Herring spawn locations were primarily identified with fixed-wing overflights conducted by DFO Resource Management Area staff.
 Thirteen flights were conducted this season in February and March.
