--- a/RegionalText/2020/PRD/DataCollectionPrograms.tex
+++ b/RegionalText/2020/PRD/DataCollectionPrograms.tex
@@ -4,8 +4,8 @@ In 2020, biological samples were collected by two seine test vessels:
 \item The ``Viking Leader'' collected samples in Kitkatla for 18 days from March \nth{16} to April \nnd{2}.
 \end{itemize}
 The primary purpose of the test charter vessels was to collect biological samples from main bodies of herring from Big Bay and Kitkatla, identified from soundings.
-% Both vessels were also used as management platforms: ``Franciscan No.1'' in Kitkatla, and ``Nita Maria'' in Big Bay. 
-Herring spawn locations were primarilyidentified using a drones, operated from both the ``Nita Maria'' and the ``Viking Leader''.
-%One overflight was conducted in early April.
-Due to Covid-19, the dive charter vessel ``Royal Pride'' was repurposed as a surface survey charter, successfully conducting surface surveys for 17-day charter from March \nth{27} to April \nve{12}, surveying spawn throughout the stock area.
+Herring spawn locations were primarily identified using drones, operated from both the ``Nita Maria'' and the ``Viking Leader''.
+Due to COVID-19, the dive charter vessel ``Royal Pride'' was repurposed as a surface survey charter,
+successfully conducting surface surveys for a 17 day charter from March \nth{27} to April \nve{12},
+surveying spawn throughout the stock area.
 All three charter vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
