--- a/RegionalText/2020/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2020/SoG/DataCollectionPrograms.tex
@@ -6,8 +6,8 @@ Herring spawn locations were primarily identified with fixed-wing overflights co
 Fifteen flights were conducted this season, between February and April.
 Two dive charter vessels operated in the SoG:
 \begin{itemize}
-\item The ``Viking Spirit'' surveyed 21 days from March \nth{13} to April \nnd{2}, and
-\item The ``Ocean Cloud'' surveyed 12 days from March \nth{12} to March \nrd{23}.
+\item The ``Viking Spirit'' surveyed 21 days from March \nth{13} to April \nth{2}, and
+\item The ``Ocean Cloud'' surveyed 12 days from March \nth{12} to March \nth{23}.
 \end{itemize}
 Both dive vessels and the seine charter vessel ``Denman Isle'' were funded by DFO, through a contract to the Herring Conservation Research Society.
 Additional sampling and sounding efforts conducted through the Industry Test Program were funded by the Herring Industry.
