--- a/RegionalText/2020/WCVI/DataCollectionPrograms.tex
+++ b/RegionalText/2020/WCVI/DataCollectionPrograms.tex
@@ -10,7 +10,7 @@ Thirteen flights were conducted this season in February and March.
 
 Two dive charter vessels operated on the WCVI:
 \begin{itemize}
-\item The ``Pachena No.1'' surveyed 15 days from March \nth{9} to March \nrd{23}, and
-\item The ``Seaveyor'' surveyed 11 days from February \nth{26} to March \nnd{22}.
+\item The ``Pachena No.1'' surveyed 15 days from March \nth{9} to March \nth{23}, and
+\item The ``Seaveyor'' surveyed 11 days from February \nth{26} to March \nth{22}.
 \end{itemize}
 The seine test charter vessel and the dive survey vessels were funded by DFO, through a contract to the Herring Conservation Research Society.
