--- a/RegionalText/2020/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2020/SoG/DataCollectionPrograms.tex
@@ -4,10 +4,12 @@ The primary purpose of the test charter vessel was to collect biological samples
 
 Herring spawn locations were primarily identified with fixed-wing overflights conducted by DFO Resource Management Area staff.
 Fifteen flights were conducted this season, between February and April.
-Two dive charter vessels operated in the SoG:
+Three dive charter vessels operated in the SoG:
 \begin{itemize}
-\item The ``Viking Spirit'' surveyed 21 days from March \nth{13} to April \nth{2}, and
-\item The ``Ocean Cloud'' surveyed 12 days from March \nth{12} to March \nth{23}.
+\item The ``Viking Spirit'' surveyed 21 days from March \nth{13} to April \nth{2}, 
+\item The ``Ocean Cloud'' surveyed 12 days from March \nth{12} to March \nth{23}, and
+\item The ``Seaveyor'' surveyed 1 day on the Sunshine Coast on March \nth{2}.
 \end{itemize}
-Both dive vessels and the seine charter vessel ``Denman Isle'' were funded by DFO, through a contract to the Herring Conservation Research Society.
+In addition, Atlegay divers surveyed Statistical Area 13 on March \nth{2}.
+The dive vessels and the seine charter vessel ``Denman Isle'' were funded by DFO, through a contract to the Herring Conservation Research Society.
 Additional sampling and sounding efforts conducted through the Industry Test Program were funded by the Herring Industry.
