Update SoG data collection

--- a/RegionalText/2020/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2020/SoG/DataCollectionPrograms.tex
@@ -4,12 +4,13 @@ The primary purpose of the test charter vessel was to collect biological samples
 
 Herring spawn locations were primarily identified with fixed-wing overflights conducted by DFO Resource Management Area staff.
 Fifteen flights were conducted this season, between February and April.
-Three dive charter vessels operated in the SoG:
+Four dive charter vessels operated in the SoG:
 \begin{itemize}
 \item The ``Viking Spirit'' surveyed 21 days from March \nth{13} to April \nth{2}, 
-\item The ``Ocean Cloud'' surveyed 12 days from March \nth{12} to March \nth{23}, and
-\item The ``Seaveyor'' surveyed 1 day on the Sunshine Coast on March \nth{2}.
+\item The ``Ocean Cloud'' surveyed 12 days from March \nth{12} to March \nth{23},
+\item The ``Seaveyor'' surveyed 1 day on the Sunshine Coast on March \nth{2}, and
+\item Atlegay divers surveyed Statistical Area 13 on March \nth{2}.
 \end{itemize}
-In addition, Atlegay divers surveyed Statistical Area 13 on March \nth{2}.
-The dive vessels and the seine charter vessel ``Denman Isle'' were funded by DFO, through a contract to the Herring Conservation Research Society.
+The first three dive vessels and the seine charter vessel ``Denman Isle'' were funded by DFO, through a contract to the Herring Conservation Research Society.
+Atlegay divers were funded by AFS.
 Additional sampling and sounding efforts conducted through the Industry Test Program were funded by the Herring Industry.
