--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -54,10 +54,9 @@
 \newcommand{\missingSpawn}[1]{Missing spawn index values (#1) indicate incomplete spawn surveys.}
 \newcommand{\spawnTypes}{There are three types of spawn survey observations: observations of spawn taken from the surface usually at low tide, underwater observations of spawn on giant kelp, Macrocystis (\emph{Macrocystis} spp.), and underwater observations of spawn on other types of algae and the substrate, which we refer to as `understory.'}
 \newcommand{\pctChange}[1]{Percent change is $\delta_t=\frac{\alpha_t - \alpha_{t-1}}{\alpha_{t-1}}$ where $\alpha_t$ is the #1 in year $t$.}
-
-% COVID-19 comment
+\newcommand{\lateBio}{Note that biological sampling data from 2020 are not yet available for distribution; updated tables will be circulated in September.}
 \newcommand{\covid}{\section{COVID-19 pandemic}
-The coronavirus pandemic impacted our ability to collect and analyse Pacific Herring data throughout British Columbia in 2020.
+The COVID-19 pandemic impacted our ability to collect and analyse Pacific Herring data throughout British Columbia in 2020.
 The pandemic and associated provincial response changed rapidly during the Pacific Herring field program season.
 Despite these challenges, surveyors assessed all major observed spawns in the \Sexpr{length(allRegions$major)} major stock assessment regions (SARs).
 However, these changes impacted our ability to assess spawn in SARs with later spawns more than SARs with earlier spawns.
@@ -70,5 +69,6 @@ To address this backlog efficiently, senior science staff and fisheries managers
 Unfortunately, it may not be possible to analyse all the Pacific Herring age data in time for stock assessments this year.
 Note that although age data are not required for Pacific Herring stock assessments, they are an important component.\par
 Due to the delay in the analysis of biological data, some tables and figures showing biological data have been omitted from this version of the report.
-We will update data summary reports with biological data for 2020, including age data, when available.
+Other tables and figures are included, but they do not have biological data for 2020.
+We will update data summary reports with biological data for 2020 when available.
 We appreciate your patience and understanding as we continue to work from home in these uncertain and changing times.}
