--- a/RegionalText/2020/CC/GeneralObservations.tex
+++ b/RegionalText/2020/CC/GeneralObservations.tex
@@ -2,7 +2,9 @@
 
 \item As planned, two dive charters did the spawn survey this year.
 
-\item The SOK fishery was cancelled, but FSC did proceed.
+\item The Heiltsuk First Nation made the difficult decision to cancel their commercial SOK fishery due to COVID-19 concerns;
+FSC fisheries proceeded.
+The Kitasoo Xai'xais commercial SOK fishery proceeded and successful FSC fisheries were also reported.
 
 \item Because of limited overflights, dive boats spent a lot of time searching for spawn.
 A small boat charter to map spawn at low tide, as in Haida Gwaii, is recommended for future surveys.
