--- a/RegionalText/2020/HG/GeneralObservations.tex
+++ b/RegionalText/2020/HG/GeneralObservations.tex
@@ -17,10 +17,10 @@ No spawns were observed in the Juan Perez area.
 \item Spawn from Section Cove to Scudder Island did not seem as intense as the past few years,
 but this year the fish spawned on multiple days on the same beach.
 
-\item Fish seemed smaller this year, and seemed to have less variation in length frequency.
+\item Herring seemed smaller this year, and seemed to have less variation in length frequency.
 Some samples appeared to have full stomachs.
-Most of the fish seemed to be fairly close to spawning.
-There were very few juvenile fish this year.
+Most of the herring seemed to be fairly close to spawning.
+There were very few juvenile herring this year.
 
 \item Prevailing Northwest and Northeast winds kept water temperature between 6.2 and 6.4$^\circ\text{C}$.
 
