--- a/RegionalText/2020/WCVI/GeneralObservations.tex
+++ b/RegionalText/2020/WCVI/GeneralObservations.tex
@@ -1,6 +1,6 @@
 \begin{itemize}
 
-\item As planned, the asessment program included seine and dive vessels.
+\item As planned, the assessment program included seine and dive vessels.
 
 \item All major observed spawns were surveyed by divers.
 Notably, divers surveyed spawn on Bajo Reef during a calm break in the weather.
