--- a/Document/Variables.rnw
+++ b/Document/Variables.rnw
@@ -50,7 +50,7 @@
 \newcommand{\darkThisYr}{The year \thisYr{} has a darker bar to facilitate interpretation.}
 \newcommand{\withPrivacy}[1]{Note: data may be withheld due to privacy concerns (#1).}
 \newcommand{\noSOK}{Data from the spawn-on-kelp (SOK) fishery are not included.}
-\newcommand{\spawnIndexTechReport}{See the \href{https://github.com/grinnellm/SpawnIndex/blob/master/tr/Draft.pdf}{draft spawn index techincal report} for calculations to convert SOK harvest to spawning biomass.}
+\newcommand{\spawnIndexTechReport}{See the \href{https://github.com/grinnellm/SpawnIndex/blob/master/tr/Draft.pdf}{draft spawn index technical report} for calculations to convert SOK harvest to spawning biomass.}
 \newcommand{\missingSpawn}[1]{Missing spawn index values (#1) indicate incomplete spawn surveys.}
 \newcommand{\spawnTypes}{There are three types of spawn survey observations: observations of spawn taken from the surface usually at low tide, underwater observations of spawn on giant kelp, Macrocystis (\emph{Macrocystis} spp.), and underwater observations of spawn on other types of algae and the substrate, which we refer to as `understory.'}
 \newcommand{\pctChange}[1]{Percent change is $\delta_t=\frac{\alpha_t - \alpha_{t-1}}{\alpha_{t-1}}$ where $\alpha_t$ is the #1 in year $t$.}
@@ -64,7 +64,7 @@ For example, spawns were surveyed by surface surveys instead of underwater dive 
 Although Pacific Herring biological samples were collected as usual, the pandemic delayed the analysis of biological data for all SARs.
 This delay is most notable for age data which are analysed at the sclerochronology lab at the Pacific Biological Station.
 This lab closed on March \nth{16}, and resumed limited ageing analysis on July \nth{6}.
-This resulted in delayed Pacific Herring ages for 2020, and many other species.
+This has resulted in delayed provision of age data for Pacific Herring and many other species.
 To address this backlog efficiently, senior science staff and fisheries managers at DFO are prioritizing species to analyse in the sclerochronology lab.
 Unfortunately, it may not be possible to analyse all the Pacific Herring age data in time for stock assessments this year.
 Note that although age data are not required for Pacific Herring stock assessments, they are an important component.\par
