--- a/RegionalText/2020/SoG/GeneralObservations.tex
+++ b/RegionalText/2020/SoG/GeneralObservations.tex
@@ -18,7 +18,7 @@ with the addition of extensive spawn between Blunden Point and Icarus Point near
 \item Additional spawn was reported in Areas 15, 16, and 18.
 Spawn was also reported in Area 17 south (Mudge Island, Cedar, and Yellow Point), a change from an absence in these areas in recent years.
 
-\item The Strait of Georgia sea lion population during the herring season continues to grow, and impacts the ability to obtain biological samples in some areas and times.
+\item The presence of sea lions in the Strait of Georgia during the herring season continues to grow, and impacts the ability to obtain biological samples in some areas and times.
 A small number of Humpback Whales were also observed.
 
 \item In Puget Sound, the preliminary estimate of herring spawning biomass is 17,635 tonnes.
