--- a/RegionalText/2020/SoG/DataCollectionPrograms.tex
+++ b/RegionalText/2020/SoG/DataCollectionPrograms.tex
@@ -9,8 +9,8 @@ Four dive charter vessels operated in the SoG:
 \item The ``Viking Spirit'' surveyed 21 days from March \nth{13} to April \nth{2}, 
 \item The ``Ocean Cloud'' surveyed 12 days from March \nth{12} to March \nth{23},
 \item The ``Seaveyor'' surveyed 1 day on the Sunshine Coast on March \nth{2}, and
-\item Atlegay divers surveyed Statistical Area 13 on March \nth{2}.
+\item A-Tlegay divers surveyed Statistical Area 13 on March \nth{2}.
 \end{itemize}
 The first three dive vessels and the seine charter vessel ``Denman Isle'' were funded by DFO, through a contract to the Herring Conservation Research Society.
-Atlegay divers were funded by AFS.
+A-Tlegay divers were funded by AFS.
 Additional sampling and sounding efforts conducted through the Industry Test Program were funded by the Herring Industry.
